--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,17 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.clearminds.cmh</groupId>
+			<artifactId>model</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<version>8.4.0.jre8</version>
 		</dependency>
-
+		
 	</dependencies>
 
 	<build>
